# compacs-ai-desktop

./: .gitignore  ASSEMBLE.md  CMakeLists.txt  RAG_ARCHITECTURE.md  README.md  RUN.cmd  START.cmd  START.txt  START_UI.cmd  STOP.cmd  build.bat  config.cpp  config.hpp  config.yaml  format_vectors.hpp  httplib.h  hybrid_search.hpp  lemma_map.hpp  lemma_map.tsv  llama_chat.err  llama_embed.err  main.cpp  pack_parts.ps1  qa_evaluation.csv  rag_pipeline.hpp  runtime.stack.json
assets/: index.html
tools/eval/: README.md  bench_ask.py  qa_evaluation.json  run_qa_eval.py  score_threshold.py
tools/export_vectors/: main.cpp
